add mixedsort for alphanumeric mods, and order legend manually

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 *.rproj*
 .Rhistory
 .Rproj.user/shared/notebooks/paths
+.Rhistory
+.Rproj.user/2B1B628E/pcs/workbench-pane.pper
+.Rproj.user/shared/notebooks/paths
