--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 .Rproj.user/2B1B628E/pcs/workbench-pane.pper
 .Rproj.user/shared/notebooks/paths
 .Rhistory
+R/.Rhistory
+.Rproj.user/2B1B628E/pcs/workbench-pane.pper
+.Rproj.user/2B1B628E/pcs/windowlayoutstate.pper
